--- a/ideainfo_test/.classpath
+++ b/ideainfo_test/.classpath
@@ -32,9 +32,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/chanseul/download/eGovFrameDev-3.10.0-64bit/workspace_ideainfo_test/ideainfo_test/src/main/webapp/WEB-INF/lib/mariadb-java-client-2.4.4-sources.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mariadb-java-client-2.4.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
